--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ nav ul {
 
 }
 
-nav a {
+nav ul a {
     display: block;
     text-decoration: none; 
     /* width: 100%; */
@@ -85,16 +85,17 @@ nav a:hover {
 }
 
 .nav-image {
-    border: 2px solid #3a1;
+    display: flex;
+    width: 80%;
+    height: auto;
+    margin: 1rem auto;
+    border: 1px solid #000;
     border-radius: 10%;
-    max-width: 80%;
-    height: 20%;
-    margin: 0 auto;
-    /* margin: auto; */
 }
 
 .nav-image:hover {
-border: 2px solid #fff;
+    border: 2px solid #fff;
+    background-color: none;
 }
 
 main {
