--- a/style.css
+++ b/style.css
@@ -84,12 +84,26 @@ nav ul a:hover {
     background-color: #11d;
 }
 
+nav section {
+	display: flex;
+	width: 80%;
+	height: auto;
+	margin: auto;
+}
+
+nav section a {
+	width: 100%;
+	height: 100%;
+	border-radius: 10%;	
+	overflow: hidden;
+	
+}
+
 .nav-image {
     display: flex;
-    width: 80%;
-    height: auto;
-    margin: 1rem auto;
-    border: 1px solid #000;
+    width: 100%;
+    height: 100%;
+	border: 1px solid #000;
     border-radius: 10%;
 }
 
