--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ nav {
     display: flex;
     flex: 25%;
     flex-wrap: wrap; 
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 1.5rem 0.5rem;
     margin: 0.5rem;
-    border: 1px solid #3a1;
+    border: 2px solid #3a1;
     border-radius: 5%;
 }
 
@@ -58,6 +58,7 @@ nav ul {
     width: 100%;
     height: auto;
     text-align: center;
+    margin-bottom: 1rem;
 
 }
 
@@ -117,7 +118,7 @@ main {
     flex: 51%;
     padding: 0.5rem;
     /* margin: auto; */
-    border: 1px solid #3a1;
+    border: 2px solid #3a1;
     background: #fff;
 }
 
@@ -135,7 +136,7 @@ aside {
     flex: 21%;
     padding: 0.5rem;
     margin: 0.5rem;
-    border: 1px solid #3a1;
+    border: 2px solid #3a1;
     border-radius: 5%;
     /* position: relative; */
 }
