--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     max-width: 80rem;
     margin: 1rem auto;
+    padding: 0.5rem;
     position: relative;
     background-attachment: fixed;
     background: url("images/header2.jpg") fixed no-repeat;
