--- a/style.css
+++ b/style.css
@@ -208,3 +208,9 @@ footer {
     /* display: inline-block; */
         /* flex: 30%; */
     }
+
+@media only screen and (max-width:500px) {
+	body {
+	background: url("images/header2.jpg") fixed no-repeat; 
+	background-size: contain;
+	margin: 0 auto;
