--- a/style.css
+++ b/style.css
@@ -212,5 +212,7 @@ footer {
 @media only screen and (max-width:500px) {
 	body {
 	background: url("images/header2.jpg") fixed no-repeat; 
-	background-size: 100% 100%;
+	background-size: contain;
 	margin: 0 auto;
+	}
+}
