--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-	display: flex;
-    max-width: 80rem;
+    background: url("images/header2.jpg") fixed no-repeat;
+    background-size: cover;
+/*     max-width: 80rem; */
     margin: 0 auto;
     padding: 0.5rem;
     position: relative;
 /*     background-attachment: fixed; */
-    background: url("images/header2.jpg") fixed no-repeat;
-    background-size: 100%;
+   
 }
 
 header {
@@ -209,11 +209,11 @@ footer {
     /* display: inline-block; */
         /* flex: 30%; */
     }
-/* 
+
 @media only screen and (max-width:500px) {
 	body {
 	background: url("images/header2.jpg") fixed no-repeat; 
-	background-size: cover;
+	background-size: contain;
 	margin: 0 auto;
 	}
-} */
+}
