--- a/style.css
+++ b/style.css
@@ -210,10 +210,11 @@ footer {
         /* flex: 30%; */
     }
 
-@media only screen and (max-width:500px) {
+/* @media only screen and (max-width:500px) {
 	body {
 	background: url("images/header2.jpg") fixed no-repeat; 
 	background-size: contain;
 	margin: 0 auto;
 	}
 }
+ */
