--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     background: url("images/header2.jpg") fixed no-repeat;
     background-size: cover;
-/*     max-width: 80rem; */
+    max-width: 80rem;
     margin: 0 auto;
     padding: 0.5rem;
     position: relative;
@@ -210,11 +210,11 @@ footer {
         /* flex: 30%; */
     }
 
-/* @media only screen and (max-width:500px) {
+@media only screen and (max-width:400px) {
 	body {
 	background: url("images/header2.jpg") fixed no-repeat; 
 	background-size: contain;
 	margin: 0 auto;
 	}
 }
- */
+
