--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    background: url("images/header2.jpg");
+    background: url("images/header2.jpg") fixed no-repeat;
     background-size: cover;
     max-width: 80rem;
     margin: 0 auto;
     padding: 0.5rem;
     position: relative;
-/*     background-attachment: fixed; */
    
 }
 
@@ -210,11 +209,4 @@ footer {
         /* flex: 30%; */
     }
 
-@media only screen and (max-width:400px) {
-	body {
-	background: url("images/header2.jpg") fixed; 
-	background-size: cover;
-	margin: 0 auto;
-	}
-}
 
