--- a/style.css
+++ b/style.css
@@ -9,12 +9,18 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
-body {
-    background: url("images/header2.jpg") fixed no-repeat;
+html {
+    
+    background-image: url("images/header2.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
-    max-width: 80rem;
-    margin: 0 auto;
-    padding: 0.5rem;
+}
+
+body {
+    /* max-width: 80rem; */
+    padding: 1rem;
+    margin: 1rem auto;
     position: relative;
    
 }
@@ -22,26 +28,20 @@ body {
 header {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    padding: 2rem;
     border: 2px solid #3a1;
     border-radius: 10%;
     margin-bottom: 1rem;
     color: #fff;
-   /* align-items: center; */
-   /* text-align: center; */
 }
 
 .main-container {
     display: flex;
     flex-wrap: wrap;
-    /* margin: 0.5rem auto; */
-    /* padding: 1rem; */
 }
 
 .iframe-container {
     display: flex;
-    /* width: 50%; */
-    /* height: auto; */
     margin: auto;
 }
 
@@ -59,23 +59,20 @@ nav ul {
     width: 100%;
     height: auto;
     text-align: center;
-    margin-bottom: 1rem;
-
+	
+margin-bottom: 1rem;	
 }
 
 nav ul a {
     display: block;
     text-decoration: none; 
-    /* width: 100%; */
-    /* height: 100%; */
     padding: 1rem;
-    color: #fff;    
+    color: #fff;
 }
 
 nav li {
     display: block;
     list-style: none;
-    /* padding: 1rem; */
     margin: 0.5rem auto;
     border: 1px solid #3a1;
     border-radius: 10%;
@@ -91,13 +88,14 @@ nav section {
 	width: 80%;
 	height: auto;
 	margin: auto;
+	
 }
 
 nav section a {
-	width: 100%;
-	height: 100%;
-	border-radius: 10%;	
-	overflow: hidden;
+    width: 100%;
+    height: 100%;
+    border-radius: 10%;	
+    overflow: hidden;
 	
 }
 
@@ -105,12 +103,12 @@ nav section a {
     display: flex;
     width: 100%;
     height: 100%;
-	border: 1px solid #000;
+    border: 1px solid #000;
     border-radius: 10%;
 }
 
 .nav-image:hover {
-    border: 2px solid #fff;
+    border: 1px solid #fff;
 }
 
 main {
@@ -118,7 +116,6 @@ main {
     flex-wrap: wrap; 
     flex: 51%;
     padding: 0.5rem;
-    /* margin: auto; */
     border: 2px solid #3a1;
     background: #fff;
 }
@@ -139,7 +136,6 @@ aside {
     margin: 0.5rem;
     border: 2px solid #3a1;
     border-radius: 5%;
-    /* position: relative; */
 }
 
 aside ul {
@@ -149,7 +145,6 @@ aside ul {
 }
 
 aside li {
-    /* text-decoration: none; */
     list-style: none;
     margin: 0.5rem auto;
     border: 1px solid #3a1;
@@ -170,7 +165,7 @@ aside a:hover {
 }
 
 aside a:hover p {
-    color: black;
+    color: #000;
 }
 
 .aside-button-image {
@@ -179,7 +174,6 @@ aside a:hover p {
     margin: 1rem auto;
     border: 1px solid #000;
     border-radius: 50%;
-    /* width: 8%; */
     position: fixed;
     top: 2%;
     right: 2%;
@@ -192,7 +186,6 @@ aside a:hover p {
 footer {
     margin-top: 1rem;
     padding: 2rem;
-    /* display: flex; */
     border: 2px solid #3a1;
     border-radius: 10%;
     
@@ -204,9 +197,15 @@ footer {
         max-width: 60%;
         background: #3a1;
         margin: 0 auto;
-    /* margin: 0.2rem auto; */
-    /* display: inline-block; */
-        /* flex: 30%; */
     }
+
+  /* @media only screen and (max-width: 500px) {
+    html {
+        background-image: url ("images/header2.jpg");
+        background-repeat: no-repeat;
+        background-position: fixed;
+        background-size: cover;
+    }
+    } */
 
 
