--- a/style.css
+++ b/style.css
@@ -11,9 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 
 html {
     
-    background-image: url("images/header2.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: url("images/header2.jpg") no-repeat left top fixed;
     background-size: cover;
 }
 
@@ -92,10 +90,10 @@ nav section {
 }
 
 nav section a {
-    width: 100%;
-    height: 100%;
-    border-radius: 10%;	
-    overflow: hidden;
+	width: 100%;
+	height: 100%;
+	 border-radius: 10%;	
+	overflow: hidden;
 	
 }
 
@@ -103,7 +101,7 @@ nav section a {
     display: flex;
     width: 100%;
     height: 100%;
-    border: 1px solid #000;
+	border: 1px solid #000;
     border-radius: 10%;
 }
 
@@ -165,7 +163,7 @@ aside a:hover {
 }
 
 aside a:hover p {
-    color: #000;
+    color: black;
 }
 
 .aside-button-image {
@@ -198,14 +196,5 @@ footer {
         background: #3a1;
         margin: 0 auto;
     }
-
-  /* @media only screen and (max-width: 500px) {
-    html {
-        background-image: url ("images/header2.jpg");
-        background-repeat: no-repeat;
-        background-position: fixed;
-        background-size: cover;
-    }
-    } */
 
 
