--- a/style.css
+++ b/style.css
@@ -11,36 +11,37 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     max-width: 80rem;
-    margin: 1rem auto;
+    margin: 0 auto;
     position: relative;
-    background-attachment: fixed;
+}
+
+.all {
     background: url("images/header2.jpg") fixed no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 80rem;
+    padding: 0.2rem 0.5rem;
 }
 
 header {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 1rem;
     border: 2px solid #3a1;
     border-radius: 10%;
     margin-bottom: 1rem;
     color: #fff;
-   /* align-items: center; */
-   /* text-align: center; */
 }
 
 .main-container {
     display: flex;
     flex-wrap: wrap;
-    /* margin: 0.5rem auto; */
-    /* padding: 1rem; */
 }
 
 .iframe-container {
     display: flex;
-    /* width: 50%; */
-    /* height: auto; */
     margin: auto;
 }
 
@@ -48,9 +49,9 @@ nav {
     display: flex;
     flex: 25%;
     flex-wrap: wrap; 
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 1.5rem 0.5rem;
     margin: 0.5rem;
-    border: 1px solid #3a1;
+    border: 2px solid #3a1;
     border-radius: 5%;
 }
 
@@ -58,14 +59,13 @@ nav ul {
     width: 100%;
     height: auto;
     text-align: center;
+    margin-bottom: 1rem;
 
 }
 
-nav a {
+nav ul a {
     display: block;
     text-decoration: none; 
-    /* width: 100%; */
-    /* height: 100%; */
     padding: 1rem;
     color: #fff;    
 }
@@ -73,28 +73,41 @@ nav a {
 nav li {
     display: block;
     list-style: none;
-    /* padding: 1rem; */
     margin: 0.5rem auto;
     border: 1px solid #3a1;
     border-radius: 10%;
     overflow: hidden;
 }
 
-nav a:hover {
+nav ul a:hover {
     background-color: #11d;
 }
 
-nav > img {
-    border: 2px solid #3a1;
-    border-radius: 10%;
-    max-width: 80%;
-    height: 20%;
-    margin: 0 auto;
-    /* margin: auto; */
+nav section {
+	display: flex;
+	width: 80%;
+	height: auto;
+	margin: auto;
 }
 
-nav >img:hover {
-border: 2px solid #fff;
+nav section a {
+	width: 100%;
+	height: 100%;
+	border-radius: 10%;	
+	overflow: hidden;
+	
+}
+
+.nav-image {
+    display: flex;
+    width: 100%;
+    height: 100%;
+	border: 1px solid #000;
+    border-radius: 10%;
+}
+
+.nav-image:hover {
+    border: 2px solid #fff;
 }
 
 main {
@@ -103,7 +116,7 @@ main {
     flex: 51%;
     padding: 0.5rem;
     /* margin: auto; */
-    border: 1px solid #3a1;
+    border: 2px solid #3a1;
     background: #fff;
 }
 
@@ -121,9 +134,8 @@ aside {
     flex: 21%;
     padding: 0.5rem;
     margin: 0.5rem;
-    border: 1px solid #3a1;
+    border: 2px solid #3a1;
     border-radius: 5%;
-    /* position: relative; */
 }
 
 aside ul {
@@ -133,7 +145,6 @@ aside ul {
 }
 
 aside li {
-    /* text-decoration: none; */
     list-style: none;
     margin: 0.5rem auto;
     border: 1px solid #3a1;
@@ -157,16 +168,12 @@ aside a:hover p {
     color: black;
 }
 
-
-/* ako ne raboti, da se mahne pozishana na aside-buton-image i da se mahne position-relative na bodyto; */
-
 .aside-button-image {
     width: 8%;
     height: auto;
     margin: 1rem auto;
     border: 1px solid #000;
     border-radius: 50%;
-    /* width: 8%; */
     position: fixed;
     top: 2%;
     right: 2%;
@@ -179,7 +186,6 @@ aside a:hover p {
 footer {
     margin-top: 1rem;
     padding: 2rem;
-    /* display: flex; */
     border: 2px solid #3a1;
     border-radius: 10%;
     
@@ -191,7 +197,4 @@ footer {
         max-width: 60%;
         background: #3a1;
         margin: 0 auto;
-    /* margin: 0.2rem auto; */
-    /* display: inline-block; */
-        /* flex: 30%; */
     }
